# cpp_tasks

./: .gitignore
classwork/july_27_dynamic_memory/: CMakeLists.txt  README.md  main.cpp
classwork/july_27_dynamic_memory/includes/: dynamic_memory.h
classwork/july_27_dynamic_memory/src/: copy_dynamic_array.cpp  delete_element.cpp  find_max_element.cpp  get_squares_array.cpp  initialize_dynamic_array.cpp  reverse_dynamic_array.cpp  reverse_dynamic_string.cpp
homework/july_17_advanced_recursive_functions/: CMakeLists.txt  README.md  main.cpp
homework/july_17_advanced_recursive_functions/include/: binaryRepresentation.h  findMinValueInArray.h  firstUppercase.h  printArrayElements.h  printArrayElementsInReverse.h
homework/july_17_advanced_recursive_functions/src/: binaryRepresentation.cpp  findMinValueInArray.cpp  firstUppercase.cpp  gcd.cpp  printArrayElements.cpp  printArrayElementsInReverse.cpp
homework/july_19_matrix_manipulations_and_recursive_algorithms/: CMakeLists.txt  README.md  main.cpp
homework/july_19_matrix_manipulations_and_recursive_algorithms/constants/: arrayConstants.h
homework/july_19_matrix_manipulations_and_recursive_algorithms/include/: matrixInputOutputHelpers.h  matrixManipulationsAndRecursiveAlgorithms.h
homework/july_19_matrix_manipulations_and_recursive_algorithms/src/: binarySearch.cpp  enterSquareMatrixPrint.cpp  findMaxNumberInMatrix.cpp  matrixMainDiagonalSum.cpp  replaceEvenIndexedRowsWithZero.cpp  secondaryDiagonalSum.cpp  sumAboveMainDiagonal.cpp  swapDiagonals.cpp
homework/july_19_matrix_manipulations_and_recursive_algorithms/src/helpers/: matrixInputOutput.cpp
(+10 files in other folders)
